增加Fuel支持，可调用ServiceInfo接口，还未从settings中读取配置，service info界面存在不会自动换行的问题

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <item name="maxRowWidth" type="dimen">100dp</item>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
