--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,10 +19,10 @@
         android:text="@string/vps_info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/vps_info_setup" />
+        app:layout_constraintTop_toBottomOf="@+id/app_settings" />
 
     <Button
-        android:id="@+id/vps_info_setup"
+        android:id="@+id/app_settings"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
